issue3/close button not visible enough corrected

--- a/apps/a11y-front/src/app/components/newsletter/newsletter.component.scss
+++ b/apps/a11y-front/src/app/components/newsletter/newsletter.component.scss
@@ -16,12 +16,12 @@
     position: absolute;
     top: 5px;
     right: 5px;
-
-    border: 1px solid lightgray;
+    padding: 0;
+    border: 1px solid var(--dark-color);
     border-radius: 30px;
     width: 20px;
     height: 20px;
-    color: lightgray;
+    color: var(--dark-color);
     text-align:center;
   }
 
